fixed bugs, cleaned up code, added some styling

--- a/Views/GarageZones/Create.cshtml
+++ b/Views/GarageZones/Create.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+
+<div class="lnks">
+    <a asp-action="Index">Back to List</a>
+</div>
+<br>
 
 <h4>GarageZone</h4>
 <hr />
@@ -22,10 +26,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
