--- a/Views/GarageZones/Details.cshtml
+++ b/Views/GarageZones/Details.cshtml
@@ -4,12 +4,21 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
+<div class="lnks">
+    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+    <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a>
+</div>
 <div>
     <h4>GarageZone</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Capacity)
         </dt>
@@ -17,8 +26,4 @@
             @Html.DisplayFor(model => model.Capacity)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
