--- a/Views/ParkedVehicles/Create.cshtml
+++ b/Views/ParkedVehicles/Create.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>ParkedVehicle</h4>
+<div class="lnks">
+    <a asp-action="Index">Back to List</a>
+</div>
+
+<h4>Parked a Vehicle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -64,10 +67,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
