--- a/Views/ParkedVehicles/Delete.cshtml
+++ b/Views/ParkedVehicles/Delete.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="lnks">
+    <a asp-action="Index">Back to List</a>
+</div>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -94,6 +96,5 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
     </form>
 </div>
