--- a/Views/ParkedVehicles/Details.cshtml
+++ b/Views/ParkedVehicles/Details.cshtml
@@ -4,91 +4,88 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="lnks">
+    <a asp-action="Index">Back to List</a>
+    <a asp-action="Delete" asp-route-id="@Model?.Id">Check Out</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+</div>
 
 <div>
     <h4>ParkedVehicle</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.RegNr)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.RegNr)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Year)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Year)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Brand)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Brand)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Model)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Model)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Wheels)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Wheels)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            <img class="@Html.DisplayFor(model => model.Color) carImage"
-                src="~/img/@Html.DisplayFor(model => model.VehicleType.Image)"
-                alt="@Html.DisplayFor(model => model.Category)">
+        <dt  class = "col-sm-3">Type & Color</dt>
+        <dd  class = "col-sm-9">
+            @Html.DisplayFor(model => model.VehicleType.Name) &
+            @Html.DisplayFor(model => model.Color)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
+        </dt>
+        <dd class = "col-sm-9">
+            <img class="@Html.DisplayFor(model => model.Color) carImage"
+				src="~/img/@Html.DisplayFor(model => model.VehicleType.Image)"
+				alt="@Html.DisplayFor(model => model.Category)">
+        </dd>
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.EnteryTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.EnteryTime)
         </dd>
-        @* <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.ExitTime)
-        </dt> *@
-        @* <dd class = "col-sm-10">
+        </dt>
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.ExitTime)
-        </dd> *@
-        <dt class = "col-sm-2">
+        </dd>
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.SpotNumber)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SpotNumber)
         </dd>
-
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.GarageZone)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.GarageZone.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Member)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Member.FirstName)
             @Html.DisplayFor(model => model.Member.LastName)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
