--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,13 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - GarageV32 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - GarageV3.2 - 
+            
+            
+            <a href="https://github.com/MohammadKassar">Mohammad Kassar</a>
+            <a href="https://github.com/abedfetrat">Abed Fetrat</a>
+            <a href="https://github.com/BaraaAlhaib">Albaraa Alhaib</a>
+            <a href="https://github.com/rezapps">Yonas Rezaee</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
