--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,7 +18,19 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #ffffff;
+    color: #000000;
+
+
+}
+
+@media (prefers-color-scheme: dark), (color-scheme: dark) {
+    body {
+        /* Dark mode colors */
+        background-color: #000000;
+        color: #ffffff;
+    }
 }
 
 footer a {
