--- a/Views/GarageZones/Create.cshtml
+++ b/Views/GarageZones/Create.cshtml
@@ -4,11 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-
-<div class="lnks">
-    <a asp-action="Index">Back to List</a>
-</div>
-<br>
+<h1>Create</h1>
 
 <h4>GarageZone</h4>
 <hr />
@@ -22,10 +18,19 @@
                 <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ZoneName" class="control-label"></label>
+                <input asp-for="ZoneName" class="form-control" />
+                <span asp-validation-for="ZoneName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
