--- a/Views/GarageZones/Delete.cshtml
+++ b/Views/GarageZones/Delete.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="lnks">
-    <a asp-action="Index">Back to List</a>
-</div>
-<br>
+<h1>Delete</h1>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>GarageZone</h4>
@@ -19,10 +17,23 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Capacity)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ZoneName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ZoneName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.OccupiedSpotsList)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.OccupiedSpotsList)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
