--- a/Views/GarageZones/Details.cshtml
+++ b/Views/GarageZones/Details.cshtml
@@ -4,26 +4,33 @@
     ViewData["Title"] = "Details";
 }
 
-<div class="lnks">
-    <a asp-action="Index">Back to List</a>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
-    <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a>
-</div>
+<h1>Details</h1>
+
 <div>
     <h4>GarageZone</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Capacity)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Capacity)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ZoneName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ZoneName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.OccupiedSpotsList)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.OccupiedSpotsList)
+        </dd>
     </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
