--- a/Views/ParkedVehicles/Create.cshtml
+++ b/Views/ParkedVehicles/Create.cshtml
@@ -21,8 +21,16 @@
                 <span asp-validation-for="RegNr" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="VehicleTypeId" class="control-label"></label>
+                <select asp-for="VehicleTypeId" class="form-control vType" asp-items="ViewBag.VehicleTypeId">
+                    <option value="">-- Select a Type --</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Color" class="control-label"></label>
-                <select asp-for="Color" asp-items="@ViewBag.Colors" class="form-control"></select>
+                <select asp-for="Color" asp-items="@ViewBag.Colors" class="form-control">
+                    <option value="">-- Select a Color --</option>
+                </select>
                 <span asp-validation-for="Color" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,20 +55,30 @@
             </div>
             <div class="form-group">
                 <label asp-for="GarageZoneId" class="control-label"></label>
-                <select asp-for="GarageZoneId" class ="form-control" asp-items="ViewBag.GarageZoneId"></select>
+                <select asp-for="GarageZoneId" class="form-control" asp-items="ViewBag.GarageZoneId">
+                    <option value="">-- Select a Zone --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="SpotNumber" class="control-label"></label>
-                <input asp-for="SpotNumber" class="form-control" />
+                <input asp-for="SpotNumber" class="form-control sn1" />
                 <span asp-validation-for="SpotNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group sn2">
+                <label asp-for="SpotNumber2" class="control-label"></label>
+                <input asp-for="SpotNumber2" class="form-control" />
+                <span asp-validation-for="SpotNumber2" class="text-danger"></span>
+            </div>
+            <div class="form-group sn3">
+                <label asp-for="SpotNumber3" class="control-label"></label>
+                <input asp-for="SpotNumber3" class="form-control" />
+                <span asp-validation-for="SpotNumber3" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MemberId" class="control-label"></label>
-                <select asp-for="MemberId" class ="form-control" asp-items="ViewBag.MemberId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="VehicleTypeId" class="control-label"></label>
-                <select asp-for="VehicleTypeId" class ="form-control" asp-items="ViewBag.VehicleTypeId"></select>
+                <select asp-for="MemberId" class="form-control" asp-items="ViewBag.MemberId">
+                    <option value="">-- Select a Member --</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -70,5 +88,12 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
+
+<script>
+    @* var spotsLists = Model?.GarageZone?.OccupiedSpotsList != null ? @Json.Serialize(Model.GarageZone?.OccupiedSpotsList) : "";
+    console.log(spotsLists); *@
+</script>
