--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
 
 
 
-<body style="color-scheme:dark">
-    <div class="form-check form-switch mx-4">
+<body>
+    @* <div class="form-check form-switch mx-4">
         <input class="form-check-input p-2"
                type="checkbox"
                role="switch"
@@ -21,7 +21,7 @@
                onclick="myFunction()" 
                />
 
-    </div>
+    </div> *@
 
 
     <header>
